# lava

src/lava/magma/runtime/message_infrastructure/: CMakeLists.txt
src/lava/magma/runtime/message_infrastructure/message_infrastructure/csrc/: abstract_actor.cc  message_infrastructure_py_wrapper.cc  transformer.h
src/lava/magma/runtime/message_infrastructure/test/: CMakeLists.txt  test_channel.cc  test_multiprocessing.py
src/lava/magma/runtime/message_infrastructure/test/cpptest/: test_channel.cc  test_multiprocessing.cc
